force-app/main/default/objects/ZSFDesPalet__x/ZSFDesPalet__x.object-meta.xml
<CustomObject>
    <description>ZSFDesPaletSet</description>
    <externalDataSource>SAP</externalDataSource>
    <externalName>ZSFDesPaletSet</externalName>
    <label>ZSFDesPalet</label>
    <pluralLabel>ZSFDesPaletSet</pluralLabel>
</CustomObject>