force-app/main/default/objects/ZSFDesPalet__x/fields/AccessOrder__c.field-meta.xml
<CustomField>
    <fullName>AccessOrder__c</fullName>
    <description>AccessOrder</description>
    <externalDeveloperName>AccessOrder</externalDeveloperName>
    <label>AccessOrder</label>
    <length>3</length>
    <type>Text</type>
</CustomField>