force-app/main/default/objects/ZSFDesPalet__x/fields/ConditionClass__c.field-meta.xml
<CustomField>
    <fullName>ConditionClass__c</fullName>
    <description>ConditionClass</description>
    <externalDeveloperName>ConditionClass</externalDeveloperName>
    <label>ConditionClass</label>
    <length>4</length>
    <type>Text</type>
</CustomField>