force-app/main/default/objects/ZSFDesPalet__x/fields/ConditionRate__c.field-meta.xml
<CustomField>
    <fullName>ConditionRate__c</fullName>
    <description>ConditionRate</description>
    <externalDeveloperName>ConditionRate</externalDeveloperName>
    <label>ConditionRate</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>