force-app/main/default/objects/ZSFDesPalet__x/fields/ConditionRecordNo__c.field-meta.xml
<CustomField>
    <fullName>ConditionRecordNo__c</fullName>
    <description>CnditionRecordNo</description>
    <externalDeveloperName>CnditionRecordNo</externalDeveloperName>
    <label>ConditionRecordNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>