force-app/main/default/objects/ZSFDesPalet__x/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <description>CurrencyCode</description>
    <externalDeveloperName>CurrencyCode</externalDeveloperName>
    <label>CurrencyCode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>