force-app/main/default/objects/ZSFDesPalet__x/fields/DChannel__c.field-meta.xml
<CustomField>
    <fullName>DChannel__c</fullName>
    <description>DChannel</description>
    <externalDeveloperName>DChannel</externalDeveloperName>
    <label>DChannel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>