force-app/main/default/objects/ZSFDesPalet__x/fields/LoadDate__c.field-meta.xml
<CustomField>
    <fullName>LoadDate__c</fullName>
    <description>LoadDate</description>
    <externalDeveloperName>LoadDate</externalDeveloperName>
    <label>LoadDate</label>
    <type>DateTime</type>
</CustomField>