force-app/main/default/objects/ZSFDesPalet__x/fields/LoadTime__c.field-meta.xml
<CustomField>
    <fullName>LoadTime__c</fullName>
    <description>LoadTime</description>
    <externalDeveloperName>LoadTime</externalDeveloperName>
    <label>LoadTime</label>
    <type>Time</type>
</CustomField>