force-app/main/default/objects/ZSFDesPalet__x/fields/Mandt__c.field-meta.xml
<CustomField>
    <fullName>Mandt__c</fullName>
    <description>Mandt</description>
    <externalDeveloperName>Mandt</externalDeveloperName>
    <label>Mandt</label>
    <length>3</length>
    <type>Text</type>
</CustomField>