force-app/main/default/objects/ZSFDesPalet__x/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <description>ProductCode</description>
    <externalDeveloperName>ProductCode</externalDeveloperName>
    <label>ProductCode</label>
    <length>18</length>
    <type>Text</type>
</CustomField>