force-app/main/default/objects/ZSFDesPalet__x/fields/ProductHierarchy__c.field-meta.xml
<CustomField>
    <fullName>ProductHierarchy__c</fullName>
    <description>ProductHierarchy</description>
    <externalDeveloperName>ProductHierarchy</externalDeveloperName>
    <label>ProductHierarchy</label>
    <length>18</length>
    <type>Text</type>
</CustomField>