force-app/main/default/objects/ZSFDesPalet__x/fields/RoundingProfile__c.field-meta.xml
<CustomField>
    <fullName>RoundingProfile__c</fullName>
    <description>RoundingProfile</description>
    <externalDeveloperName>RoundingProfile</externalDeveloperName>
    <label>RoundingProfile</label>
    <length>4</length>
    <type>Text</type>
</CustomField>