force-app/main/default/objects/ZSFDesPalet__x/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <description>SalesOrg</description>
    <externalDeveloperName>SalesOrg</externalDeveloperName>
    <label>SalesOrg</label>
    <length>4</length>
    <type>Text</type>
</CustomField>