force-app/main/default/objects/ZSFDesPalet__x/fields/SourceTable__c.field-meta.xml
<CustomField>
    <fullName>SourceTable__c</fullName>
    <description>SourceTable</description>
    <externalDeveloperName>SourceTable</externalDeveloperName>
    <label>SourceTable</label>
    <length>30</length>
    <type>Text</type>
</CustomField>