force-app/main/default/objects/ZSFDesPalet__x/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Unit</description>
    <externalDeveloperName>Unit</externalDeveloperName>
    <label>Unit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>